# fuge

./: README.md  prediction_test.py  script_description.md  test_fuge.py
fuge-lc/: CMakeLists.txt  FUGE-LC.pro  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  computethread.cpp  computethread.h  editparamsdialog.h  errordialog.cpp  errordialog.h  evalplot.h  fugemain.cpp  fugemain.h  fuzzyResources.qrc  fuzzyeditor.h  helpdialog.cpp  helpdialog.h  infodialog.h  main.cpp  scriptmanager.cpp  scriptmanager.h  statsplot.cpp  statsplot.h  systemparameters.cpp
fuge-lc/coev/: coevolution.cpp  coevolution.h
fuge-lc/fuzzy/: defuzzmethodcoa.cpp  defuzzmethodsingleton.cpp  fuzzymembershipscoco.cpp  fuzzymembershipsgenome.cpp  fuzzyoperatorand.h  fuzzyrulegenome.cpp  fuzzysystem.cpp  fuzzysystem.h  fuzzyvariable.cpp
fuge-lc/libGGA/EvolutionEngine/: evolutionengine.cpp  evolutionengine.h
fuge-lc/libGGA/EvolutionEngine/SelectionMethod/: elitismwithrandom.cpp
fuge-lc/libGGA/Population/: population.cpp
fuge-lc/libGGA/Utility/: randomgenerator.cpp  randomgenerator.h
